objects/tffa__CounterOfferItem__c.object
<CustomObject>
    <description>A counter offer is a product offered in response to the original product in the application. Happens when the original offer was rejected due to some criteria or decisioning process. In such cases, a list of similar (eligible) products (in same product category) is offered. The products offered are usually of lesser value than the original product (down sell). In ApplicationDecisionMatrix, counterOffers represent additional outcomes that apply when the primary outcome is COUNTER_OFFER.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state and product active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Product__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional information about the counter offer for the applicant to view.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional information about the counter offer for the applicant to view.</inlineHelpText>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DecisionMatrix__c</fullName>
        <description>Reference to parent ApplicationDecisionMatrix.</description>
        <label>Decision Matrix</label>
        <referenceTo>tffa__ApplicationDecisionMatrix__c</referenceTo>
        <relationshipLabel>Counter Offers</relationshipLabel>
        <relationshipName>CounterOffers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The product being offered as a counter offer.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Counter Offer Items</relationshipLabel>
        <relationshipName>CounterOfferItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The relative order (preference) of the counter offer w.r.t others. Useful when building the counter offer page.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Counter Offer Item</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counter Offer Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CustomProductCategoryCheck</fullName>
        <active>true</active>
        <description>Product should belong to same category as DecisionMatrix Product</description>
        <errorConditionFormula>TEXT(tffa__Product__r.tffa__Category__c) &lt;&gt; TEXT(tffa__DecisionMatrix__r.tffa__Product__r.tffa__Category__c) &amp;&amp; TEXT(tffa__Product__r.tffa__Category__c) &lt;&gt; TEXT(tffa__DecisionMatrix__r.tffa__ProductCategory__c)</errorConditionFormula>
        <errorDisplayField>tffa__Product__c</errorDisplayField>
        <errorMessage>Product should belong to same category as DecisionMatrix Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__ProductCategoryCheck</fullName>
        <active>false</active>
        <description>Product should belong to same category as DecisionMatrix Product</description>
        <errorConditionFormula>TEXT(tffa__Product__r.tffa__Category__c) &lt;&gt; TEXT(tffa__DecisionMatrix__r.tffa__Product__r.tffa__Category__c)</errorConditionFormula>
        <errorDisplayField>tffa__Product__c</errorDisplayField>
        <errorMessage>Product should belong to same category as DecisionMatrix Product</errorMessage>
    </validationRules>
</CustomObject>